--- a/experiments/example/kitti_example.yaml
+++ b/experiments/example/kitti_example.yaml
@@ -2,7 +2,7 @@ random_seed: 444
 
 dataset:
   type: &dataset_type 'KITTI'
-  batch_size: 4
+  batch_size: 24
   use_3d_center: True
   class_merging: False
   use_dontcare: False
@@ -22,7 +22,7 @@ model:
 
 optimizer:
   type: 'adam'
-  lr: 0.00125
+  lr: 0.001
   weight_decay: 0.00001
 
 lr_scheduler:
@@ -40,6 +40,6 @@ trainer:
 tester:
   type: *dataset_type
   mode: single   # 'single' or 'all'
-  checkpoint: '/home/a/monodleX/data/ckpt/checkpoint_epoch_140.pth'  # for 'single' mode
+  checkpoint: ''  # for 'single' mode
   checkpoints_dir: 'checkpoints'  # for 'all' model
   threshold: 0.2  # confidence filter
