--- a/experiments/example/kitti_example.yaml
+++ b/experiments/example/kitti_example.yaml
@@ -34,7 +34,7 @@ trainer:
   max_epoch: 140
   gpu_ids: 0, 1
   save_frequency: 10 # checkpoint save interval (in epoch)
-  # resume_model: 'checkpoints/checkpoint_epoch_70.pth'
+  resume_model: '/root/monodleX/work_dirs/checkpoints/checkpoint_epoch_70.pth'
 
 
 tester:
