--- a/experiments/example/kitti_example.yaml
+++ b/experiments/example/kitti_example.yaml
@@ -32,7 +32,7 @@ lr_scheduler:
 
 trainer:
   max_epoch: 140
-  gpu_ids: 0, 1
+  gpu_ids: 0
   save_frequency: 10 # checkpoint save interval (in epoch)
   resume_model: '/root/monodleX/work_dirs/checkpoints/checkpoint_epoch_70.pth'
 
@@ -40,6 +40,6 @@ trainer:
 tester:
   type: *dataset_type
   mode: single   # 'single' or 'all'
-  checkpoint: '/mnt/e/Output/A3/checkpoint_epoch_140.pth'  # for 'single' mode
+  checkpoint: '/mnt/e/Output/B3/checkpoint_epoch_140.pth'  # for 'single' mode
   checkpoints_dir: '/mnt/e/Output/A2/'  # for 'all' model
   threshold: 0.2  # confidence filter
